Remove mock & add more tests